# bolt

./: .gitignore  Cargo.toml  Makefile  README.md  install.sh
.github/workflows/: release.yml
src/: cli.rs  config.rs  main.rs
src/commands/: list.rs  mod.rs  onboarding.rs  status.rs  switch.rs  ui.rs
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.vue  style.css
ui/src/composables/: useShell.js
