[package]
name = "bolt"
version = "1.0.1"
edition = "2024"
description = "CLI to manage Docker projects"

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
colored = "2"
anyhow = "1"
rustyline = { version = "14", features = ["derive"] }
